--- a/matchgame.html
+++ b/matchgame.html
@@ -4,7 +4,7 @@
         <style>
             .tile
             {
-                display: inline-block;
+                display: inline-flex;
                 margin: 4px;
                 height: 200;
                 border: none;
@@ -17,6 +17,7 @@
                 position: absolute;
                 width: 100%;
                 height: 100%;
+                border-radius: 10px;
                 backface-visibility: hidden;
                 background-image: url("images/tileBack.jpeg");
                 
@@ -26,6 +27,7 @@
                 position: absolute;
                 width: 100%;
                 height: 100%;
+                border-radius: 10px;
                 backface-visibility: hidden;
                 transform: rotateY(180deg);
             }
