--- a/matchgame.html
+++ b/matchgame.html
@@ -2,11 +2,66 @@
 <html>
     <head>
         <style>
+            body
+            {
+                overflow: hidden;
+                background-color: #042062;
+                text-align: center;
+                background-size: cover; 
+                background-repeat: no-repeat;
+                background-position: center;
+            }
+            .heading
+            {
+                font-size: 40pt;
+                color: #DEE9E6;
+            }
+            .button1
+            {
+                color: #8eaee8;
+                font-size: 32pt;
+                border-radius: 15px;
+                border: none;
+                background-color: #DEE9E6;
+                margin: 20px;
+                padding: 20px;
+            }
+            .button2
+            {
+                background-color: #DEE9E6;
+                color: #042062;
+                border: none;
+                border-radius: 15px;
+                margin-left: 10px;
+                margin-right: 10px;
+            }
+            .button1:hover 
+            {
+                cursor: pointer;
+                transform: scale(1.05);
+                border-color: #DEE9E6;
+            } 
+            .tile:hover 
+            {
+                cursor: pointer;
+                transform: scale(1.05);
+                border-color: #DEE9E6;
+            }   
+            .tileFront:hover 
+            {
+                cursor: pointer;
+                border-color: #DEE9E6;
+            }
+            .tileBack:hover 
+            {
+                cursor: pointer;
+                border-color: #DEE9E6;
+            }    
             .tile
             {
                 display: inline-flex;
-                margin: 4px;
-                height: 200;
+                margin: 10px;
+                max-width: 150px;
                 border: none;
                 border-radius: 10px;
                 transform-style: preserve-3d;
@@ -17,10 +72,10 @@
                 position: absolute;
                 width: 100%;
                 height: 100%;
-                border-radius: 10px;
+                border-radius: 15px;
                 backface-visibility: hidden;
                 background-image: url("images/tileBack.jpeg");
-                
+                border: 5px solid #020D27;
             }
             .tileFront
             {
@@ -30,6 +85,11 @@
                 border-radius: 10px;
                 backface-visibility: hidden;
                 transform: rotateY(180deg);
+                border: 20px;
+                background-size: cover; 
+                background-repeat: no-repeat;
+                background-position: center;
+                background-color: #DEE9E6;
             }
             .row
             {
@@ -39,7 +99,7 @@
             }
         </style>
         <script>
-            let body, h, score, images, flipped, inProgress, matches, resetMenu, finalScore, message, gameMenu;
+            let body, h, score, images, flipped, inProgress, matches, resetMenu, finalScore, message, gameMenu, minScore;
             function initialize()
             {
                 score = 0;
@@ -49,12 +109,12 @@
                 resetMenu = document.getElementById("resetMenu");
                 finalScore = document.getElementById("finalScore");
                 gameMenu = document.getElementById("gameMenu");
-                images = ["url(images/apple1.jpeg)","url(images/leaf1.jpeg)","url(images/pumpkin1.jpeg)",
-                    "url(images/pumpkinPie1.jpeg)","url(images/pumpkinSpice1.jpeg)", "url(images/apple2.jpeg)",
-                    "url(images/leaf2.jpeg)", "url(images/pumpkin2.jpeg)","url(images/pumpkinPie2.jpeg)",
-                    "url(images/pumpkinSpice3.jpeg)","url(images/apple3.jpeg)","url(images/leaf3.jpeg)",
-                    "url(images/pumpkin3.jpeg)","url(images/pumpkinPie3.jpeg)","url(images/pumpkinSpice4.jpeg)",
-                    "url(images/apple4.jpeg)","url(images/pumpkin4.jpeg)","url(images/pumpkinPie4.jpeg)"];
+                images = ["url(images/1.png)","url(images/2.png)","url(images/3.png)",
+                    "url(images/4.png)","url(images/5.png)", "url(images/6.png)",
+                    "url(images/7.png)", "url(images/8.png)","url(images/9.png)",
+                    "url(images/10.png)","url(images/11.png)","url(images/12.png)",
+                    "url(images/13.png)","url(images/14.png)","url(images/15.png)",
+                    "url(images/16.png)","url(images/17.png)","url(images/18.png)"];
                 inProgress = false;
                 startGame(4, 4);
             }
@@ -62,6 +122,7 @@
             function startGame(n, m)
             {
                 let options = new Map()
+                minScore = n*m;
                 for (let i = 0; i < n*m/2; i++)
                 {
                     options.set(images[i], 2);
@@ -76,12 +137,12 @@
                         tile.setAttribute("class", "tile");
                         tile.setAttribute("onclick", "flip(this)");
                         tile.setAttribute("state", "back");
-                        tile.setAttribute("style", "height: 150px; width: " +  90/(m+1) + "%");
+                        tile.setAttribute("style", `height: 150px; width:  ${90/(m+1)}%`);
                         let tileBack = document.createElement("div");
                         tileBack.setAttribute("class", "tileBack");
                         let tileFront = document.createElement("div");
                         tileFront.setAttribute("class", "tileFront");
-                        let str = pickOne(options)
+                        let str = pickOne(options);
                         tileFront.style.backgroundImage = str;
                         tile.setAttribute("id", str);
                         tile.appendChild(tileBack);
@@ -116,7 +177,7 @@
 
             function flip(obj)
             {
-                if (obj.getAttribute("state") != "removed" && !inProgress)
+                if (obj.getAttribute("state") !== "removed" && !inProgress)
                 {
                     if (obj.getAttribute("state") === "back")
                     {
@@ -158,7 +219,7 @@
                         flipped = null;
                     }
                     score++;
-                    h.innerHTML = "Score: " + score;
+                    h.innerHTML = `Score: ${score}`;
                 }
             }
 
@@ -167,6 +228,9 @@
                 gameMenu.setAttribute("hidden", "true");
                 finalScore.innerHTML = score;
                 resetMenu.removeAttribute("hidden");
+                message.innerHTML = (score === minScore) ? "Perfect!" : 
+                                    (score <= minScore*2) ? "Great Job!" : 
+                                    (score <= minScore * 4) ? "You Win!" : "Yikes.";
             }
             function reset(n, m)
             {
@@ -179,21 +243,21 @@
     </head>
     <body onload="initialize();">
         <div id="gameMenu">
-            <h1 id="score">Score: 0</h1>
+            <div class = "heading" id="score">Score: 0</div>
             <div >
-                <button onclick="reset(4, 4);">New Easy</button>
-                <button onclick="reset(5, 4);">New Medium</button>
-                <button onclick="reset(5, 6);">New Hard</button>
+                <button class="button2" onclick="reset(4, 4);">New Easy</button>
+                <button class="button2" onclick="reset(4, 5);">New Medium</button>
+                <button class="button2" onclick="reset(4, 6);">New Hard</button>
             </div>
             <div id="grid" style="text-align: center;"></div>
         </div>
         <div id="resetMenu" hidden>
-            <h1>New Game?</h1>
-            <h1 id="finalScore"></h1>
-            <h2 id="message"></h2>
-            <button onclick="reset(4, 4);">Easy</button>
-            <button onclick="reset(5, 4);">Medium</button>
-            <button onclick="reset(5, 6);">Hard</button>
+            <h2 class="heading" id="message"></h2>
+            <h1 class="heading" id="finalScore"></h1>
+            <h1 class="heading">New Game?</h1>
+            <button class="button1" onclick="reset(4, 4);">Easy</button>
+            <button class="button1" onclick="reset(5, 4);">Medium</button>
+            <button class="button1" onclick="reset(5, 6);">Hard</button>
         </div>
     </body>
 </html>
