added arrow function

--- a/matchgame.html
+++ b/matchgame.html
@@ -218,7 +218,8 @@
                         obj.setAttribute("state", "back");
                         flipped = null;
                     }
-                    score++;
+                    const incScore = () => { score ++; }
+                    incScore();
                     h.innerHTML = `Score: ${score}`;
                 }
             }
